--- a/scrolling-images.html
+++ b/scrolling-images.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lippitt Hill Story - Scrolling Images</title>
+    <title>Oral Histories of Lippitt Hill - History</title>
     <!-- Leaflet CSS - keeping for consistent styling -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <!-- Main CSS from original site -->
@@ -18,7 +18,7 @@
             <div id="text-panel">
                 <div id="text-content">
                     <h2> Urban Renewal and Rhode Island: A Complicated History</h2>
-                        <p style="border-bottom: 2px dotted #303030; margin-bottom: 0px; padding-bottom: 50px; font-size: 14.4px; margin-right: 5%;">Essay by Miguel Youngs, Public Services Assistant <br>
+                        <p style="border-bottom: 2px dotted #303030; margin-bottom: 0px; padding-bottom: 50px; font-size: 14.4px; margin-right: 5%;">Essay by Miguel Youngs, Public Services Assistant
                             Rhode Island Historical Society</p>
                     
                     <!-- Each section has an ID that corresponds to an image -->
@@ -79,7 +79,7 @@
                         <p>In 1965, the “Rhode Island Fair Housing Practices” law was enacted with the goal of eradicating the legal discriminatory practices minorities faced in the housing market. The opposition to fair housing laws was fierce. In the years prior, 500 opponents to fair housing led by Providence attorney Robert Dresser protested at the Rhode Island State House, stating that “a fair housing law would infringe on private property rights, legislate social progress, lower property values and increase racial tension in the state.”<sup>19</sup> These complaints echo the same opinions displayed over 20 years earlier in the petition at Tonomy Hill in Newport.</p>
                         <p>Racial tensions in private and public housing continue to be a problem in the United States as well as in Rhode Island. Through historical research, we can better understand the ways that the state and federal governments participated in discriminatory housing practices and also the ways that they tried to, successfully and unsuccessfully, remedy that very problem. The fact that many solutions were pursued in good faith and yet still failed to resolve these issues is proof of how complicated urban renewal was (and still is) as a practice. Most of the structures built during the urban renewal boom can still be seen today. It is undeniable that many of these projects have been very successful in bringing increased traffic and revenue into the city. In some ways, this justifies the initiatives. However, there are those who continue to remind us of the neighborhoods that once stood in these places of the communities that were displaced, and of the promises that were left unfulfilled. The racial discrimination operative in the cases of Tonomy Hill in 1942 and of Robert Dresser in 1963 absolutely still exists. Opposition by residents and some lawmakers against having low-income housing built in certain neighborhoods use similar arguments – racist opinions cloaked in economic rationales – that low-income housing brings higher crime with it and lowers the sale-ability of surrounding homes. Perhaps this is what Mayor Joseph Doorley meant when he advocated for a “social renewal” that must occur if “urban renewal” is ever to be successful.</p>
                     </section>
-                    <section id="section-6" class="text-section" style="border-top: 2px dotted #303030;">
+                    <section id="section-5" class="text-section" style="border-top: 2px dotted #303030;">
                         <h3>Terms & Sources</h3>
                         <br>
                         <p style="text-indent: -1px;">Urban Renewal: <br>  a program of land redevelopment often used to address urban decay in cities
@@ -100,7 +100,7 @@
                         <br><br>Citizens United for Fair Housing Law: <br>a group of local citizens who organized to push for laws and politics that promote fair housing
                         <br><br>Legally Discriminatory:<br> acts of prejudice, bigotry, discrimination, and segregation that are not prohibited by law</p>
                     </section>
-                    <section id="section-7" class="text-section" style="border-top: 2px dotted #303030; margin-top: 30px;">
+                    <section id="section-5" class="text-section" style="border-top: 2px dotted #303030; margin-top: 30px;">
                         <br>
                         <p style="text-indent: -1px; text-align: left;">
                             1 <br>Antonucci. Machine Politics and Urban Renewal in Providence, Rhode Island: The Era of Mayor Joseph A. Doorley, Jr., 1965-74. (2012). History Dissertations. Paper 1. p.95
