--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lippitt Hill Oral History Map</title>
+    <title>Oral Histories of Lippitt Hill - Map</title>
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <!-- Add this in the head section of your HTML -->
@@ -27,7 +27,7 @@
                 <div id="info-content">
                     <h2>Click a Marker to View Stories
                         from 
-                         <br>The East Side (Lippitt Hill)</h2>
+                        The East Side (Lippitt Hill)</h2>
                     <br>
                     <span id="transcript-details">The dialogue in this section presents excerpts of a full conversation 
                         recorded on June 29, 2017 at Rochambeau Library in Providence RI.
