--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
             
             <div id="info-panel">
                 <div id="info-content">
-                    <h2>Click a Marker to View Stories
-                        from 
-                        The East Side (Lippitt Hill)</h2>
+                    <h2 style="border-bottom: 2px dotted #303030; padding-bottom: 30px;">
+                        Click a Marker to View Stories 
+                        <br>
+                        from The East Side (Lippitt Hill)</h2>
                     <br>
                     <span id="transcript-details">The dialogue in this section presents excerpts of a full conversation 
                         recorded on June 29, 2017 at Rochambeau Library in Providence RI.
