--- a/scrolling-images.html
+++ b/scrolling-images.html
@@ -19,11 +19,12 @@
                 <div id="text-content">
                                             <!-- Mobile image container for section 1 -->
                         <div class="mobile-image-container">
-                            <img src="images/RHiX173732-reduced-scaled-1.jpeg" alt="Boy Looks at Lippitt Hill Redevelopment Construction">
+                            <img src="images/RHiX173732-reduced-scaled-1.jpeg" alt="Boy Looks at Lippitt Hill Redevelopment Construction" style="margin-bottom: -25px; border-bottom: 1px solid #303030;">
                             <!-- <div class="mobile-image-caption">Boy looking at the Lippitt Hill Redevelopment Project construction.</div> -->
                         </div>
-                    <h2> Urban Renewal and Rhode Island: A Complicated History</h2>
-                        <p style="border-bottom: 2px dotted #303030; margin-bottom: 0px; padding-bottom: 50px; font-size: 14.4px; margin-right: 5%;">Essay by Miguel Youngs, Public Services Assistant
+                    <h2> Urban Renewal and Rhode Island: 
+                        <br>A Complicated History</h2>
+                        <p style="border-bottom: 2px dotted #303030; margin-bottom: 0px; padding-bottom: 30px; font-size: 14.4px; margin-right: 5%;">Essay by Miguel Youngs, Public Services Assistant
                             Rhode Island Historical Society</p>
                     
                     <!-- Each section has an ID that corresponds to an image -->
