--- a/about-overlay.html
+++ b/about-overlay.html
@@ -5,7 +5,7 @@
             <button id="close-overlay">&times;</button>
         </div>
         <div class="overlay-body" >
-            <p>Welcome to the Oral Histories of Lippitt Hill project. This interactive map documents the stories and memories of former residents of the Lippitt Hill neighborhood in Providence, RI.</p>
+            <p style="font-family: 'Catalogue'; font-size: 16px; line-height: 1.4; font-weight: normal;">Welcome to the Oral Histories of Lippitt Hill project. This interactive map documents the stories and memories of former residents of the Lippitt Hill neighborhood in Providence, RI.</p>
             
             <p>In 2017, Stages of Freedom conducted interviews to collect oral histories from former residents of this historically Black neighborhood, which was razed in the 1960s to make way for the University Heights complex.</p>
             
