--- a/scrolling-images.html
+++ b/scrolling-images.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="overlay.css">
 </head>
 <body>
+    <div class="color-filter-overlay"></div>
     <div class="container">
         <main>
             <!-- Left panel with scrollable text -->
@@ -26,7 +27,7 @@
                         </div>
                     <h2> Urban Renewal and Rhode Island: 
                         <br>A Complicated History</h2>
-                        <p style="border-bottom: 2px dotted #303030; margin-bottom: 0px; padding-bottom: 30px; font-size: 14.4px; margin-right: 5%; font-family: 'FuturaMono'; font-size: 20px; line-height: 1.1; font-weight: bold;">Essay by Miguel Youngs, Public Services Assistant
+                        <p style="border-bottom: 2px dotted #303030; margin-bottom: 0px; padding-bottom: 15px; margin-right: 5%; font-family: 'MonoTypewrite'; font-size: 14px; line-height: 1.6; ">Essay by Miguel Youngs, Public Services Assistant
                             Rhode Island Historical Society</p>
                     
                     <!-- Each section has an ID that corresponds to an image -->
@@ -144,7 +145,7 @@
                     </section>
                     <section id="section-5" class="text-section" style="border-top: 2px dotted #303030; margin-top: 30px;">
                         <br>
-                        <p style="text-indent: -1px; text-align: left; font-family: FuturaMono; font-size: 20px; line-height: 1.1; font-weight: bold;">
+                        <p style="text-indent: -1px; text-align: left; font-family: MonoTypewrite; font-size: 14px; line-height: 1.6;">
                             1 <br>Antonucci. Machine Politics and Urban Renewal in Providence, Rhode Island: The Era of Mayor Joseph A. Doorley, Jr., 1965-74. (2012). History Dissertations. Paper 1. p.95
                             <br><br>2 <br>Rhode Island Black Heritage Society. The Struggle for African American Civil Rights in 20th Century Rhode Island: A Narrative Summary of People, Places, and Events. Report for the National Park Service. Providence. 2018. p.13-14
                             <br><br>3<br>Carl Antonucci. Machine Politics and Urban Renewal in Providence, Rhode Island: The Era of Mayor Joseph A. Doorley, Jr., 1965-74. (2012). History Dissertations. Paper 1. p.90-91
