--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
                     <span id="transcript-details" style="margin-bottom: 5px; ">
                         About this Project:
                     </span>
-                    <span id="transcript-details" style="text-indent: 5%; margin-bottom: 16px; ">This site was created to preserve and share the stories of residents from the Lippitt Hill neighborhood, providing a digital space where their voices and memories can live on. The oral histories collected here were recorded during community events in 2017 under a special grant from the Heritage Harbor Foundation. These recordings capture first-hand accounts of life in this vibrant neighborhood before it was demolished in the 1960s By connecting these stories to their physical locations on a map, we hope to give visitors a sense of the community that once thrived here, and to honor the legacy of Lippitt Hill residents whose neighborhood was lost to urban renewal.
+                    <span id="transcript-details" style="text-indent: 5%; margin-bottom: 16px; ">This site was created to preserve and share the stories of residents from the Lippitt Hill neighborhood, connecting them to the physical locations where they took place. The oral histories collected here were recorded during community events organized by Stages of Freedom in 2017, under a special grant from the Heritage Harbor Foundation. 
                     </span>
                     <span id="transcript-details" style="margin-bottom: 5px; ">
                         Acknowledgments:
