--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
                     </span>
                     <br>
                     <span id="transcript-details" style="margin-bottom: 10px; ">
-                        More Information:
+                        <!-- More Information:
                     </span>
                     <span id="transcript-details" style="text-indent: 5%; ">In 2017, under a special grant from the Heritage Harbor Foundation, Stages of Freedom conducted interviews to collect oral histories from former residents of the Lippitt Hill neighborhood on the East Side of Providence, which was razed in the 1960s to make way for the University Heights apartment/shopping complex. 
                     </span>
                     <span id="transcript-details" style="text-indent: 5%; ">Following the standing-room-only first round of interviews in June, a second series of oral history interviews was conducted with former residents of Lippitt Hill on Wednesday, September 20, at 6 p.m. at the Providence Public Library, 150 Empire Street. The event was free and open to the public.
                     </span>
                     <span id="transcript-details" style="text-indent: 5%; ">“Remembering a Lost Black Neighborhood, An Oral History Project on Lippitt Hill in Providence” seeks former residents and others who can share their experience and knowledge of the neighborhood.
-                        <br>
-
+                        <br> -->
+<!-- 
                         ***
                         <br>
-                        This project is not associated with Stages of Freedom or any other organization/individual.
+                        This project is not associated with Stages of Freedom or any other organization/individual. -->
 
 
 
