--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@ This project builds upon the important work done by Stages of Freedom, who organ
     display: inline-block;
     animation: pokeRight 2s ease-in-out infinite;
 ">
-    <span class="hide-on-mobile">Scroll I to explore textures of Lippitt Hill, 05/19/2025 ---></span>
+    <span class="hide-on-mobile">Scroll to explore textures of Lippitt Hill, 05/19/2025 ---></span>
 </span>
 
 <style>
